# acfv

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CUSTOM_NAME_README.md  ERRORS_FIXED_REPORT.md  FUNCTIONALITY_ANALYSIS.md  LICENSE  README.md  README_INTEGRATION.md  SDDAI_GITIGNORE_ADD.txt  SECURITY_AUDIT.md  TRANSCRIPTION_FIX_REPORT.md  background_runtime.py  build_pyinstaller.bat  build_with_pyinstaller.py  config.example.txt  config.txt  console_disable.py  fix.sh  installer_acfv.iss  launcher.py  pack_desktop.py  pyproject.toml  pyrightconfig.json  rag_module.py  requirements-dev.txt  requirements.txt  rewrite_imports.py  run_git_refactor.sh  run_refactor.ps1  safe_callbacks.py  set_env.bat  sitecustomize.py  subprocess_utils.py  test_english_config.py  test_rag_manual.py  test_transcription_fix.py  tmp_numbered.txt  todo.md
.github/workflows/: auto_agent.yml  ci.yml  verify.yml
ai_context/: README.md  anti_patterns.md  decision_log.md  decisions.md  keywords.yaml  problem_registry.md  runbook.md
ai_context/auto/: 00_auto_mode_rules.md  agent_config.json  result_template.md
ai_context/prompts/: 00_agent_entry.md  10_bugfix_playbook.md  20_feature_playbook.md  99_output_format.md
ai_context/task_cards/: _template.md
assets/styles/: style_profiles.yaml
assets/subtitle_styles/: presets.json
config/: __init__.py  audio_routing.yaml.example  default.yaml
data/: rag_database.json
data/save/: abs_expert_0_0.00_0.09.pth  abs_expert_1_0.09_0.38.pth  abs_expert_2_0.38_1.00.pth  patch_classifier_abs0_0.00_0.09.pth  patch_classifier_abs1_0.09_0.38.pth  patch_classifier_abs2_0.38_1.00.pth  patch_classifier_sign.pth
docs/: 00_overview.md  01_architecture.md  02_workflow.md  03_quality_gates.md  10_workflow.md  20_conventions.md  AI_AGENT_PLAYBOOK.md  GUI_PRIORITY.md  ai_skeleton_guide.md  audio_routing_implementation.md  benchmark_validation.md  glossary.md  repo_map.md
docs/issue_memory/: keywords.yaml  problem_registry.md  runbook.md
docs/issues/: problem_registry.md
docs/legacy/: 00_overview.md.original  01_architecture.md.original  02_workflow.md.original  03_quality_gates.md.original  10_workflow.md.original  20_conventions.md.original
docs/patch_guides/: PATCH-02_gui_subtitle_render_preview_and_clip_page.md  PATCH-Subtitle-Translation.md  streamer_subtitles_export.md
processing/: __init__.py  clip_video_clean.py  config_manager.py  selected_video.txt  speaker_diarization_module.py  twitch_downloader.py  video_emotion_infer.py
scripts/: auto_discover.py  auto_run.py  benchmark_streaming.py  contract_checks.py  start_gpu_gui.ps1  verify.ps1  verify.py  verify.sh
selftest/: __init__.py
selftest/adapters/: __init__.py  base.py  detect.py  registry.py  report.py  run.py
selftest/cases/: README.md
selftest/goldens/: README.md
specs/: index.md
specs/contract_output/: audio_chunk_manifest.schema.json  clip_manifest.schema.json  clips_manifest.schema.json  segments.schema.json
specs/templates/: contract_input.md  contract_output.md  meme_policy.yaml  module_spec.md  module_spec_template.md  pr.md  roi.yaml  (+4 more)
tests/: __init__.py  conftest.py  gui_dify_test.py  support.py  test_dify_backend.py  test_selector.py  test_smoke.py
tools/: build_pyinstaller.bat  cleanup_workspace.ps1  contract_selftest.py  launch_experiment.bat  run_rag_gui.py  run_spec_tests.py  scan_secrets.py  selftest_cli.py
utils/: __init__.py
(+421 files in other folders)
