[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acfv"
version = "0.1.0"
description = "ACFV – tools for VTuber clip workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamget>=4.0.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["acfv*"]

[tool.setuptools.package-data]
acfv = [
  "config/**/*",
  "processing/**/*",
  "data/**/*",
  "assets/*",
  "*.yaml",
  "*.yml",
]

[project.scripts]
acfv = "acfv.cli._entry:main"
acfv-gui = "acfv.gui:main"
acfv-rag-gui = "acfv.app.rag_gui:launch_rag_gui"
code-gui = "acfv.devtool.cli:main"

[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
