[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acfv"
version = "0.1.0"
description = "ACFV – tools for VTuber clip workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "torchaudio>=0.9.0",
    "transformers>=4.20.0",
    "nltk>=3.7",
    "scikit-learn>=1.0.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.6.0",
    "librosa>=0.9.0",
    "pydub>=0.25.0",
    "soundfile>=0.10.0",
    "streamget>=4.0.8",
    "opencv-python>=4.5.0",
    "moviepy>=1.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "Pillow>=8.3.0",
    "tqdm>=4.62.0",
    "openai-whisper>=20231117",
    "demucs>=4.0.0",
    "pyannote.audio>=3.0.0",
    "resemblyzer>=0.1.1",
    "whisperx>=3.1.0",
    "stable-ts>=2.14.0",
    "pysubs2>=1.6.0",
    "scenedetect>=0.6.2",
    "llama-index>=0.9.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyannote.core>=5.0.0",
    "PyYAML>=5.4.0",
    "colorlog>=6.0.0",
    "joblib>=1.1.0",
    "python-dateutil>=2.8.0",
    "cryptography>=3.4.0",
    "rarfile>=4.0",
    "psutil>=5.8.0",
    "memory-profiler>=0.60.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sseclient-py>=1.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["acfv*"]

[tool.setuptools.package-data]
acfv = [
  "config/*.yaml",
  "config/*.yml",
  "config/*.qss",
  "config/*.png",
  "processing/*.json",
  "processing/*.txt",
  "data/*.json",
  "data/*.jsonl",
  "assets/*",
  "*.yaml",
  "*.yml",
]

[project.scripts]
acfv = "acfv.cli._entry:main"
acfv-gui = "acfv.gui:main"
acfv-rag-gui = "acfv.app.rag_gui:launch_rag_gui"
code-gui = "acfv.devtool.cli:main"

[project.optional-dependencies]
gui = []
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.6.0"]
